--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/eattingwhat2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/eattingwhat2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
     driverClassName: com.mysql.jdbc.Driver
     username: root
     password: 1234
