修复项目部署到服务器就无法上传图片的bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,6 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml #指定xml配置文件的位置
 
-
+file:
+  uploadFolder: /usr/local/upload
+  staticAccessPath: /static/upload/**
