--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,17 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+        </dependency>
 
 
     </dependencies>
