1、规范pom文件 2、调整测试数据

--- a/pom.xml
+++ b/pom.xml
@@ -8,111 +8,35 @@
         <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>edu.lingnan</groupId>
     <artifactId>eattingwhat</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eattingwhat</name>
     <description>Demo project for Spring Boot</description>
-
-
+    <!--  项目的打包的方式 war,jar,pom, 缺省默认值为jar  -->
+    <packaging>jar</packaging>
 
     <properties>
-        <java.version>1.8</java.version>
-        <spring.version>5.2.2.RELEASE</spring.version>
-        <mysql.version>5.1.47</mysql.version>
-        <mybatis.version>3.5.3</mybatis.version>
+        <fastjson.version>1.2.58</fastjson.version>
         <junit.version>4.12</junit.version>
-        <mybatis.gen.version>1.4.0</mybatis.gen.version>
-        <slf4j.version>1.7.6</slf4j.version>
-        <aspectjweaver.version>1.9.1</aspectjweaver.version>
-
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.2</version>
-        </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-
-        <!--=============================  自己的包===================================-->
-
-
-
-        <!--thymeleaf-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.2.0.RELEASE</version>
-        </dependency>
-
-        <!-- 阿里巴巴给我们封装好的json包，JSON.toJSONString(u) -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.58</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.9.7</version>
-        </dependency>
-
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
