--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,22 @@
+# web应用的端口
 server:
   port: 8080
-
 
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3307/eattingwhat?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
   mvc:
     static-path-pattern: /static/**
 
   application:
     name: eattingwhat
-
-
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml #指定xml配置文件的位置
