--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,21 +6,21 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/luckymall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123456
+    username: lezak
+    password: 314159
   redis:
     host: 127.0.0.1
     port: 6379
-  activemq:
-    broker-url: tcp://localhost:61616
-    user: admin
-    password: admin
+  #  activemq:
+  #    broker-url: tcp://localhost:61616
+  #    user: admin
+  #    password: admin
 
   mvc:
     static-path-pattern: /static/**
 
   application:
-    name: eattingwhat
+    name: luckymall
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml #指定xml配置文件的位置
@@ -38,6 +38,6 @@ threadPool:
   # 定义线程池的队列容量
   queueCapacity: 100
   # 线程前缀名称，方便辨别
-  threadNamePrefix: eattingwhat-core-threadpool
+  threadNamePrefix: luckymall-core-threadpool
   # 非核心线程数的存活时间
   keepAliveTime: 3600
